--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Page Title</title>
 </head>
 <body>
+    <h1>This is a Heading</h1>
     <h1>first paragraph.</p>
+    <p>This is a paragraph.</p>
     <p>another paragraph</p>
 	<p>This is another paragraph.</p>
 </body>
