--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>This is a Heading</h1>
     <h1>first paragraph.</p>
     <p>This is a paragraph.</p>
-    <p>another paragraph</p>
-	<p>This is another paragraph.</p>
+    <p>This is another paragraph.</p>
+    <p>This is the third paragraph.</p>
 </body>
 </html>
