added forth paragraph

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>This is a Heading</h1>
-    <h1>first paragraph.</p>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>This is the third paragraph.</p>
+    <p>This is the forth paragraph.</p>
 </body>
 </html>
